new apis and fix
message
